log
Mon 04 Sep 2023 06:11:25 PM UTC: 
 tests:  0|6
total_score: 0/70
e53ed77
Fri 08 Sep 2023 06:03:37 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fcc59da
Fri 08 Sep 2023 06:56:11 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a669523
Fri 08 Sep 2023 07:47:06 PM UTC: 
 hashmap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:75:10: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   75 |   return map;
      |          ^~~
      |          mapa
hashmap.c:75:10: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
   76 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6af77c8
Fri 08 Sep 2023 07:47:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7a47086
Fri 08 Sep 2023 11:05:37 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++----
 1 file changed, 18 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
7c4d552
Fri 08 Sep 2023 11:15:59 PM UTC: 
 hashmap.c | 20 +++++++++-----------
 1 file changed, 9 insertions(+), 11 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:29: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   52 |     indice = (indice + 1) % map->capacity;
      |                             ^~~
      |                             mapa
hashmap.c:52:29: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0043af3
Fri 08 Sep 2023 11:16:07 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:57:3: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   57 |   map -> current = indice;
      |   ^~~
      |   mapa
hashmap.c:57:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
91c7192
Fri 08 Sep 2023 11:16:16 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
81262d9
Fri 08 Sep 2023 11:28:01 PM UTC: 
 hashmap.c | 28 ++++++++++++++++------------
 1 file changed, 16 insertions(+), 12 deletions(-)
 tests:  5|4
total_score: 30/70
de3121a
Fri 08 Sep 2023 11:32:30 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:118:1: error: control reaches end of non-void function [-Werror=return-type]
  118 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ab75716
